@@ -1,3 +1,13 @@
+2010-01-29  Pablo de la Concepción <pablo.concepcion@artica.es>
+
+	* operation/gis_maps/render_view.php: Fixed call to get_agent_names to
+	get the names in the same case as they are in the DB.
+
+	* operation/agentes/gis_view.php: Changed size of the map to be relative
+
+	* include/functions_gis.php: Fixed the call to addPoint in getAgentMap
+	to use the new parameters.
+
 2010-01-29 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* godmode/reporting/map_builder.php: use "clean_cache" in the deleting of
